<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_order_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_40"
        android:text="@string/order_no_hint"
        android:textColor="#333333"
        android:textSize="@dimen/px_48" />

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_40"
        android:layout_toRightOf="@id/tv_order_hint"
        android:text="@string/order_no"
        android:textColor="#333333"
        android:textSize="@dimen/px_48" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/px_40"
        android:text="@string/time"
        android:textColor="#999999"
        android:textSize="@dimen/px_48" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_time"
        android:layout_marginRight="@dimen/px_200"
        android:layout_marginTop="@dimen/px_40"
        android:text="@string/unheath_talk_left"
        android:textColor="#999999"
        android:textSize="@dimen/px_42" />

    <ImageView
        android:id="@+id/iv_has"
        android:layout_width="@dimen/px_20"
        android:layout_height="@dimen/px_20"
        android:layout_alignParentRight="true"
          android:layout_below="@id/tv_time"
        android:layout_marginRight="@dimen/px_60"
        android:layout_marginTop="@dimen/px_50"
        android:background="@drawable/round2" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/px_2"
        android:layout_below="@id/tv_content"
      
        android:background="#f1f1f1" />

</RelativeLayout>