<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/parts_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_40"
        android:text="@string/common_parts"
        android:textColor="#333333"
        android:textSize="@dimen/px_48" />

    <TextView
        android:id="@+id/parts_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/px_40"
        android:text="@string/state_parts"
        android:textColor="#3597d6"
        android:textSize="@dimen/px_48" />

    <TextView
        android:id="@+id/parts_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parts_name"
        android:layout_marginBottom="@dimen/px_30"
        android:layout_marginTop="@dimen/px_36"
        android:text="@string/time"
        android:textColor="#999999"
        android:textSize="@dimen/px_48" />

    <View
        android:layout_below="@id/parts_time"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/px_2"
        android:layout_marginTop="@dimen/px_30"
        android:background="#d5d5d5" />

</RelativeLayout>