<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_481"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginRight="@dimen/px_30" >

        <TextView
            android:id="@+id/photo"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/px_150"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="#41c984"
            android:textSize="@dimen/px_57" />

        <TextView
            android:id="@+id/photo_book"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/px_150"
            android:layout_below="@id/photo"
            android:layout_marginTop="@dimen/px_1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/photos"
            android:textColor="#3597d6"
            android:textSize="@dimen/px_57" />

        <TextView
            android:id="@+id/qx_photo"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/px_150"
            android:layout_below="@id/photo_book"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_5"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="#3597d6"
            android:textSize="@dimen/px_57" />
    </RelativeLayout>

</RelativeLayout>