<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_132"
        android:background="#3597d6" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/px_30"
            android:paddingLeft="@dimen/px_30"
            android:paddingRight="@dimen/px_60"
            android:paddingTop="@dimen/px_30"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_new_psw"
            android:textColor="#ffffff"
            android:textSize="@dimen/px_57" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px_100"
            android:layout_marginRight="@dimen/px_100"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_38"
                android:text="@string/reg_psw"
                android:textColor="#999999"
                android:textSize="@dimen/px_36" />

            <EditText
                android:id="@+id/set_et_psw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_30"
                android:background="@null"
                android:hint="@string/reg_et_psw"
                android:inputType="textPassword"
                android:textColor="#333333"
                android:textColorHint="#d5d5d5"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/px_48" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px_1"
                android:layout_marginTop="@dimen/px_30"
                android:background="#66999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_38"
                android:text="@string/reg_psw_more"
                android:textColor="#999999"
                android:textSize="@dimen/px_36" />

            <EditText
                android:id="@+id/set_et_psw_more"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_30"
                android:background="@null"
                android:hint="@string/reg_et_psw_more"
                android:inputType="textPassword"
                android:textColor="#333333"
                android:textColorHint="#d5d5d5"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/px_48" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px_1"
                android:layout_marginTop="@dimen/px_30"
                android:background="#66999999" />

            <TextView
                android:id="@+id/set_submit"
                android:layout_width="@dimen/px_740"
                android:layout_height="@dimen/px_120"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/px_180"
                android:background="@drawable/submit_seleter"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="@dimen/px_48" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_wait"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#20000000"
            android:clickable="true"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/loading" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>