<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_30"
            android:layout_marginTop="@dimen/px_30"
            android:text="@string/hos_name_detils"
            android:textColor="#333333"
            android:textSize="@dimen/px_48" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_room"
            android:layout_marginBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:layout_marginRight="@dimen/px_30"
            android:layout_marginTop="@dimen/px_34"
            android:lineSpacingExtra="@dimen/px_21"
            android:text="@string/time"
            android:textColor="#999999"
            android:textSize="@dimen/px_42" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_30"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/joblist_awm" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_20"
                android:text="@string/wait_fix"
                android:textColor="#7cbfea"
                android:textSize="@dimen/px_48" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/px_30"
            android:layout_below="@id/tv_content"
            android:background="#f1f1f1" />
    </RelativeLayout>

</RelativeLayout>