<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_132"
        android:background="#3597d6" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/px_30"
            android:paddingLeft="@dimen/px_30"
            android:paddingRight="@dimen/px_60"
            android:paddingTop="@dimen/px_30"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feed_back"
            android:textColor="#ffffff"
            android:textSize="@dimen/px_57" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px_500"
                android:layout_marginLeft="@dimen/px_30"
                android:layout_marginRight="@dimen/px_30"
                android:layout_marginTop="@dimen/px_30" >

                <EditText
                    android:id="@+id/et_feed_back"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/px_500"
                    android:background="@drawable/background_button"
                    android:gravity="top"
                    android:hint="@string/feed_back_hint"
                    android:maxLength="500"
                    android:padding="@dimen/px_30"
                    android:textColor="#333333"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/px_48" />

                <TextView
                    android:id="@+id/text_size"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom|right"
                    android:padding="@dimen/px_30"
                    android:text="@string/text_size"
                    android:textColor="#999999"
                    android:textSize="@dimen/px_36" />
            </FrameLayout>

            <TextView
                android:id="@+id/feed_submit"
                android:layout_width="@dimen/px_740"
                android:layout_height="@dimen/px_120"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/px_100"
                android:background="@drawable/submit_seleter"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="@dimen/px_48" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_wait"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#20000000"
            android:clickable="true"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/loading" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>