<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <com.defineapp.jiankangli_engineer.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px_1280"
            android:text="@string/scan_error"
            android:textColor="#ffffff"
            android:textSize="@dimen/px_48" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_error"
            android:layout_marginTop="@dimen/px_80"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_shoudong"
                    android:layout_width="@dimen/px_240"
                    android:layout_height="@dimen/px_240"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/saomiaoxinxi_manual" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/px_50"
                    android:text="@string/write_things"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/px_42" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_132"
            android:layout_alignParentTop="true"
            android:background="#3597d6" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/px_30"
                android:paddingLeft="@dimen/px_30"
                android:paddingRight="@dimen/px_60"
                android:paddingTop="@dimen/px_30"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scan_things"
                android:textColor="#ffffff"
                android:textSize="@dimen/px_57" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>